# numerologist

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT_COMPLETE.md  INSTALLATION_VERIFIED.md  README.md  SETUP_GUIDE.md  START_SERVER.md  UV_SETUP.md  docker-compose.yml  nx.json  package-lock.json  package.json  start-api.sh  start-dev.sh  start-mobile.sh  stop-dev.sh  tsconfig.base.json
.ai/: STORY_1_5_DEV_STATUS.md  story-1.2-optimization-summary.md  validation-report-1.3.md
.expo/: settings.json
.github/workflows/: ci.yaml  deploy-api.yaml
.nx/workspace-data/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json  source-maps.json
.nx/workspace-data/d/: server-process.json
apps/api/: .coverage  .env.example  =0.20.0  Dockerfile  README.md  alembic.ini  coverage.xml  project.json  pyproject.toml  pytest.ini  requirements.txt
apps/api/alembic/: env.py
apps/api/src/: __init__.py  config.py  dependencies.py  main.py
apps/api/src/__tests__/: test_agent_service.py  test_numerology_endpoint.py  test_tts_service.py  test_voice_endpoint.py  test_voice_service.py
apps/api/src/middleware/: error_handler.py
apps/api/src/migrations/versions/: add_conversations_table.py
apps/api/src/models/: conversation.py  numerology_profile.py
apps/api/src/repositories/: example_repository.py
apps/api/src/routes/: conversations.py  health.py  numerology.py  voice.py
apps/api/src/schemas/: conversation.py  numerology.py  voice.py
apps/api/src/services/: agent_service.py  conversation_service.py  example_service.py  numerology_service.py  pipecat_bot_service.py  text_to_speech_service.py  voice_service.py
apps/api/src/utils/: database.py  logger.py  redis_client.py
apps/api/tests/: test_conversation_service.py  test_pipecat_bot_service.py
apps/api/tests/unit/: test_example.py
apps/mobile/: .babelignore  .gitignore  BUILD_FIXES_SUMMARY.md  FIXES_APPLIED.md  IMPORT_META_FIX.md  METRO_BUNDLER_FIX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_ANDROID.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json  verify-bundler.sh
apps/mobile/assets/: README.txt  create-assets.js
apps/mobile/src/: types.ts
docs/: DAILY_CO_ASYNC_PATTERNS.md  DAILY_CO_FRONTEND_BACKEND_ISSUES_SPEC.md  DAILY_CO_INDEX.md  DAILY_CO_INTEGRATION.md  DAILY_CO_MIGRATION_SUMMARY.md  DAILY_CO_QUICKSTART.md  DAILY_CO_REFERENCE_CARD.md  VOICE_SERVICE_EXAMPLES.md  ai-prompts-react-native.md  architecture.md  azure-setup-guide.md  brief.md  codebase-review-plan.md  front-end-spec.md  frontend-review.md  numerology-calculation-guide.md  prd.md  singleton-pattern-spec.md
docs/architecture/: coding-standards.md  daily-python-vs-pipecat-comparison.md  index.md  source-tree.md  tech-stack.md
docs/investigation/: mic-streaming-issue.md
docs/stories/: 1.1.story.md  1.2.story.md  1.2a.story.md  1.2b.story.md  1.2c.story.md  1.2d-daily-bot-participant-pipecat.md  1.2d-daily-bot-participant.md  1.2d-daily-bot-pipecat.story.md  1.3.story.md  1.4.story.md  1.5.story.md  1.6.story.md
docs/stories/reports/: .gitkeep  (+6 more)
libs/numerology/: project.json  setup.py
libs/shared/: package.json  project.json  tsconfig.json
libs/ui/: package.json  project.json  tsconfig.json
(+71 files in other folders)
