[project]
name = "numeroly-api"
version = "1.0.0"
description = "Vietnamese AI voice numerology assistant backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Numeroly Team" }]

dependencies = [
    # FastAPI & Web Framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.6",
    
    # Database & ORM
    "sqlalchemy[asyncio]==2.0.23",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    
    # Authentication & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    
    # Data Validation & Serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # HTTP Client
    "httpx>=0.25.2",
    "aiohttp>=3.9.1",
    
    # External APIs - Voice Services (Story 1.6)
    "agent-framework>=1.0.0b251007",
    "openai>=1.3.0",
    "azure-identity>=1.13.0",
    "elevenlabs>=0.2.0",
    
    # Caching & Session Storage
    "redis>=6.4.0",
    "aioredis>=2.0.1",
    
    # Monitoring & Logging (Agent Framework includes observability)
    "python-json-logger==2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 312

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["src/__tests__"]
asyncio_mode = "auto"
addopts = "-v"

[dependency-groups]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    
    # Code Quality
    "mypy==1.7.1",
    "black==23.12.0",
    "flake8==6.1.0",
    "isort==5.13.2",
    
    # Development
    "ipython==8.18.1",
]
